--- a/src/gas/Index.html
+++ b/src/gas/Index.html
@@ -9,8 +9,8 @@
     <kerk-planning></kerk-planning>
     <script>
         var kp = document.querySelector('kerk-planning');
-        google.script.run.withSuccessHandler(result => { console.log(JSON.stringify(result)); kp.gebouwen = result; }).getGebouwen();
-        google.script.run.withSuccessHandler(result => { console.log(JSON.stringify(result)); kp.deelnemers = result; }).getDeelnemers();
+        google.script.run.withSuccessHandler(result => kp.gebouwen = result).getGebouwen();
+        google.script.run.withSuccessHandler(result => kp.deelnemers = result).getDeelnemers();
         kp.uitnodigen = genodigden => { google.script.run.uitnodigen(genodigden); };
     </script>
   </body>
