--- a/src/gas/Index.html
+++ b/src/gas/Index.html
@@ -11,7 +11,7 @@
         var kp = document.querySelector('kerk-planning');
         google.script.run.withSuccessHandler(result => kp.gebouwen = result).getGebouwen();
         google.script.run.withSuccessHandler(result => kp.deelnemers = result).getDeelnemers();
-        kp.uitnodigen = genodigden => { google.script.run.uitnodigen(genodigden); };
+        kp.uitnodigen = planning => { google.script.run.uitnodigen(planning); };
     </script>
   </body>
 </html>
