Over naar material design

--- a/src/gas/Index.html
+++ b/src/gas/Index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <base target="_top">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   </head>
-  <body>
+  <body style="margin: 0">
     <script type="module">
     </script>
     <kerk-planning></kerk-planning>
     <script>
         var kp = document.querySelector('kerk-planning');
         google.script.run.withSuccessHandler(result => kp.gebouwen = result).getGebouwen();
-        google.script.run.withSuccessHandler(result => { console.log(JSON.stringify(result)); kp.deelnemers = result; }).getDeelnemers();
+        google.script.run.withSuccessHandler(result => kp.deelnemers = result).getDeelnemers();
         kp.ophalen = (datum, tijdvak, handler) => { google.script.run.withSuccessHandler(handler).ophalen(datum, tijdvak); };
         kp.opslaan = (planning, handler) => { google.script.run.withSuccessHandler(handler).opslaan(planning); };
         kp.uitnodigen = (planning, handler) => { google.script.run.withSuccessHandler(handler).uitnodigen(planning); };
