--- a/src/gas/Index.html
+++ b/src/gas/Index.html
@@ -9,10 +9,10 @@
     </script>
     <kerk-planning></kerk-planning>
     <script>
-        var kp = document.querySelector('kerk-planning');
+        const kp = document.querySelector('kerk-planning');
         google.script.run.withSuccessHandler(result => kp.gebouwen = result).getGebouwen();
         google.script.run.withSuccessHandler(result => kp.deelnemers = result).getDeelnemers();
-        kp.ophalen = (datum, tijdvak, handler) => { google.script.run.withSuccessHandler(handler).ophalen(datum, tijdvak); };
+        kp.ophalen = (datum, dienst, handler) => { google.script.run.withSuccessHandler(handler).ophalen(datum, dienst); };
         kp.opslaan = (planning, handler) => { google.script.run.withSuccessHandler(handler).opslaan(planning); };
         kp.uitnodigen = (planning, handler) => { google.script.run.withSuccessHandler(result => {
           handler(result);
